minor changes and readme file update

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
 
 #container{
     margin : 20px auto;
-    background-color: white;
-    height: 500px;
+    background-color: #eee;
+    height: 300px;
     width : 700px;
     border-radius: 5px;
     /*box-shadow: 0px 5px 15px 0px;*/
@@ -101,7 +101,7 @@ body{
     display: block;
     width : 59px;
     height :59px;
-    top:130px;
+    top:150px;
     left:325px;
     font-size: 1.5em;
     font-weight: bold;
